# BTP-keyword_detect_Zephyr_TFLM

BTP-1/BTP Report/: README.md
BTP-1/Codes/Board_file_picoW/: README.md
BTP-1/Codes/Jupyter notebook for training/: LICENSE  simple_audio_Modified.ipynb
BTP-1/Codes/Keyword_detection/: CMakeLists.txt  README.md  prj.conf
BTP-1/Codes/Keyword_detection/src/: main.c  mic_functions.h  model_data_small.cpp  tflm_functions.h
BTP-1/Codes/Project files/board file/: README.md
BTP-1/Codes/Project files/keyword_detection/: README.md  mic_pico_w.overlay
BTP-1/Codes/STFT/src/: FFTconstants.c  prj.conf  (+3 more)
BTP-1/Codes/STFT_using_KissFFT/: CMakeLists.txt
BTP-1/Codes/board file/: README.md
BTP-1/Codes/keyword_detection/: README.md  mic_pico_w.overlay
BTP-1/Codes/stft/: README.md  prj.conf
BTP-2/: README.md
BTP-2/Keyword detection application/codes/: README.md
BTP-2/Mic testing code/: README.md
BTP-2/Speech Enhancement application/: README.md
BTP-2/Speech Enhancement application/codes/: convolution.py  gtcrn_stream.py  litert_conv_SliceOutside.py  quantizer.py
BTP-2/Speech Enhancement application/tflite files/: gtcrn_lkp.tflite
BTP-2/Zephyr RTOS exploratory/Overclocking speedup/: README.md
BTP-2/Zephyr RTOS exploratory/Portability in zephyr/: README.md
BTP-2/Zephyr RTOS exploratory/Portability in zephyr/DMA codes/p2m_transfer/: CMakeLists.txt  prj.conf
BTP-2/Zephyr RTOS exploratory/Portability in zephyr/DMA codes/p2m_transfer/src/: main_pico.c
BTP-2/Zephyr RTOS exploratory/Zephyr Shell DMA streaming application/: README.md
docs/BTP Report/: README.md
(+17 files in other folders)
